Feat: Modify application.properties - database platform을 InnoDBDialect로 지정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,7 @@ spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=none
 ## 서버 시작 시 DB에 테이블 생성할지 여부
 spring.jpa.generate-ddl=false
-# SQL 형식에 맞춰 (예쁘게) 출력할지 여부
+## SQL 형식에 맞춰 (예쁘게) 출력할지 여부
 spring.jpa.properties.hibernate.format_sql=true
+## 플랫폼 지정
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
